[package]
name = "video_to_gif"
version = "1.0.0"
edition = "2021"
description = "Convert a video file into an animated GIF using FFmpeg"

[[bin]]
name = "video_to_gif"
path = "src/main.rs"

[dependencies]
clap = { version = "=4.4.18", features = ["derive"] }
colored = "=2.1.0"
tempfile = "=3.9.0"

[profile.release]
opt-level = 3           # Maximum optimization
lto = "fat"             # Link-time optimization across all crates
codegen-units = 1       # Better optimization at cost of compile time
panic = "abort"         # Smaller binary, slightly faster (no unwinding)
strip = false           # Keep symbols if you need debugging, otherwise true
